# lights_camera_actix

./: .gitignore  Cargo.toml  package-lock.json  package.json  schema.sql  webpack.config.js
client/public/: index.html
client/src/: App.svelte  Sanitize.js  index.js
client/src/components/: App.svelte  List.svelte  NewList.svelte  NewTodo.svelte  Todo.svelte  TodoLists.svelte
client/src/wasm/: hello_wasm_bg.js  hello_wasm_bg.wasm  package.json
src/: db.rs  endpoints.rs  main.rs  request_count.rs  todo.rs
src/db/: mod.rs  todo.rs
