[package]
name = "lights_camera_actix"
version = "0.1.0"
authors = ["Peter Shoaf <32045721+DownsizeEngineering@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"